--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   {{/unless}}
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <angular2-tour-of-heroes-app>Loading...</angular2-tour-of-heroes-app>
